--- a/meta/main.yml
+++ b/meta/main.yml
@@ -7,6 +7,16 @@ galaxy_info:
   issue_tracker_url: https://github.com/lean-delivery/ansible-role-winlogbeat/issues
   license: Apache
   min_ansible_version: 2.8
-  platforms: [{name: [EL], versions: [7]}]
-  galaxy_tags: winlogbeat, elasticsearch, elk, logging, monitoring, system
+  platforms:
+    - name: "Windows"
+      versions:
+        - "2016"
+        - "2019"
+  galaxy_tags:
+    - winlogbeat
+    - elasticsearch
+    - elk
+    - logging
+    - monitoring
+    - system
 dependencies: []
