--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,2 +1,6 @@
 ---
-# handlers file for winlogbeat
+# handlers file for ansible-role-winlogbeat
+- name: Restart winlogbeat win
+  win_service:
+    name: '{{ winlogbeat_service_name }}'
+    state: restarted
