--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -37,7 +37,5 @@ winlogbeat_logging_to_syslog: false
 winlogbeat_logging_to_files: true
 winlogbeat_rotateeverybytes: 104857600
 winlogbeat_keepfiles: 30
-winlogbeat_ignore_older: 0
-winlogbeat_scan_frequency: 15s
-winlogbeat_harvester_buffer_size: 65535
+winlogbeat_ignore_older: 72h
 winlogbeat_logname: "winlogbeat.log"
