--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -37,5 +37,5 @@ winlogbeat_logging_to_syslog: false
 winlogbeat_logging_to_files: true
 winlogbeat_rotateeverybytes: 104857600
 winlogbeat_keepfiles: 30
-winlogbeat_ignore_older: 72h
+winlogbeat_ignore_older: 0
 winlogbeat_logname: "winlogbeat.log"
